# quickerSDLPoP

./: .fix-style.sh  .gitmodules  README.md  meson.build  meson_options.txt
.github/workflows/: make.yml
source/: controller.hpp  inputParser.hpp  meson.build  playbackInstance.hpp  player.cpp  sdlpopInstanceBase.hpp  tester.cpp
source/SDLPoP/: meson.build  sdlpopInstance.hpp
source/SDLPoP/core/: config.h  data.h  main.cpp  options.c  screenshot.c  seg000.c  seg002.c  seg003.c  seg004.c  seg006.c  seg009.c  types.h
source/quickerSDLPoP/: meson.build  sdlpopInstance.hpp
source/quickerSDLPoP/core/: common.h  const.h  miniPoP.c  miniPoP.cpp  miniPoP.hpp  types.h
tests/: lvl01.100percent.sol  lvl01.100percent.test  lvl01.anyPercent.sol  lvl01.anyPercent.test  lvl01.istaria.sol  lvl01.istaria.test  lvl01.pacifist.sol  lvl01.pacifist.test  lvl02.anyPercent.sol  lvl02.anyPercent.test  lvl03.anyPercent.sol  lvl03.anyPercent.test  lvl04.anyPercent.sol  lvl04.anyPercent.test  lvl05.anyPercent.sol  lvl05.anyPercent.test  lvl06.anyPercent.test  lvl07.anyPercent.test  lvl08.anyPercent.test  lvl09.anyPercent.test  lvl10.anyPercent.test  lvl11.anyPercent.sol  lvl11.anyPercent.test  lvl12.anyPercent.test  lvl13.anyPercent.sol  lvl13.anyPercent.test  lvl14.anyPercent.test  lvl15.anyPercent.sol  lvl15.potion0.test  meson.build  run_test.sh
