option('buildPlayer',
  type : 'boolean',
  value : false,
  description : 'Build playback tool',
  yield: true
)

option('buildSDLPoP',
  type : 'boolean',
  value : true,
  description : 'Build SDLPoP core',
  yield: true
)

option('buildTests',
  type : 'boolean',
  value : true,
  description : 'Build tests',
  yield: true
)
