# SDLPoP Core sources

SDLPoPSrc = [
  'core/data.c',
  'core/lighting.c',
  'core/menu.c',
  'core/midi.c',
  'core/opl3.c',
  'core/options.c',
  'core/replay.c',
		'core/main.cpp',
  'core/seg000.c',
  'core/seg001.c',
  'core/seg002.c',
  'core/seg003.c',
  'core/seg004.c',
  'core/seg005.c',
  'core/seg006.c',
  'core/seg007.c',
  'core/seg008.c',
  'core/seg009.c',
  'core/seqtbl.c',
  'core/stb_vorbis.c',
]

# SDLPoP Core Configuration

 SDLPoPDependency = declare_dependency(
  compile_args        : [  ],
  include_directories : include_directories(['.']),
  sources             : [ SDLPoPSrc ]
 )
