# quickerSDLPoP Core sources


# quickerSDLPoP Core Configuration

 quickerSDLPoPDependency = declare_dependency(
  compile_args        : [ ],
  include_directories : include_directories(['.', '..']),
  dependencies        : [ 
						  																		dependency('sdl2'),
								   															dependency('SDL2_image'),
		                      ]
 )